--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -64,6 +64,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+        <argLine>${surefireArgLine}</argLine>
+        </configuration>
+        
         <executions>
           <execution>
             <id>test</id>
@@ -156,12 +160,12 @@
             </goals>
             <configuration>
                 <!-- Sets the path to the file which contains the execution data. -->
-                <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+                <destFile>./coverage-reports/jacoco-ut.exec</destFile>
                 <!--
                     Sets the name of the property containing the settings
-                    for JaCoCo runtime agent.
+                    for JaCoCo runtime agent. -->
                 <propertyName>surefireArgLine</propertyName>
-                                -->
+                               
 
             </configuration>
         </execution>
@@ -177,9 +181,9 @@
             </goals>
             <configuration>
                 <!-- Sets the path to the file which contains the execution data. -->
-                <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+                <dataFile>./coverage-reports/jacoco-ut.exec</dataFile>
                 <!-- Sets the output directory for the code coverage report. -->
-                <outputDirectory>${project.build.directory}/jacoco-ut</outputDirectory>
+                <outputDirectory>./jacoco-ut</outputDirectory>
             </configuration>
         </execution>
     </executions>
